Add unix socket support.
- pfwd.c: allow forwarding independently of the socket type.
- pfwd.c: add UNIX socket support.
- pfwd.c: externalize functions to start/stop port forwarders.
- pfwd.c: add watchers lists for cleaning memory.
- pfwd.c: fix memory leaks in settings loading.
- log_console.c: fix one memory leak.
- log_file.c: fix one memory leak.
- log_syslog.c: fix one memory leak.

Signed-off-by: Boris HUISGEN <bhuisgen@hbis.fr>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
-2012-02-22 Boris HUISGEN <bhuisgen@hbis.fr>
+2012-02-28 Boris HUISGEN <bhuisgen@hbis.fr>
 
+	* pfwd.c: allow forwarding independently of the socket type.
+	* pfwd.c: add UNIX socket support.
 	* pfwd.c: add allow/deny rules support.
-	* pfwd.c: fix close sockets on error.
 
 2011-04-16 Boris HUISGEN <bhuisgen@hbis.fr>
 
