Fix read flag check of user config file.
- pfwd.c: fix read flag check of user config file.
- pfwd.c: some cosmetics fixes.
- README: fix URL.

Signed-off-by: Boris HUISGEN <bhuisgen@hbis.fr>

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 pfwd is a port forwarding server.
 
 Copyright 2011 Boris HUISGEN <bhuisgen@hbis.fr>
-Homepage : http://blog.hbis.fr/pfwd
+Homepage : http://blog.hbis.fr/softwares/pfwd
