Add forwarder support in command line execution.
- pfwd.c: add forwarder support in client execution.
- pfwd.c: fix SIGHUP to work only in daemon mode.
- pfwd.c: disable configuration file loading in client execution.
- pfwd.c: force custom config file to be absolute for daemon mode.
- pfwd.c: add listen/forward address format errors detection.
- pfwd.c: add uid/gid support for listen owner/group options.
- pfwd.c: update logger macros to check logger existence.
- pfwd.c: remove unused variables.
- pfwd.c: fix memory leaks in init_pfwds().
- pfwd.c: fix verbose output in init_logger().
- pfwd.c: fix logger_set_options() return values.
- pfwd.c: fix help text output.
- daemon.c: remove unused variable.
- configure.in: update file.

Signed-off-by: Boris HUISGEN <bhuisgen@hbis.fr>

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-pfwd is a port forwarding server.
+pfwd is a port forwarding tool.
 
 Copyright 2011 Boris HUISGEN <bhuisgen@hbis.fr>
 Homepage : http://blog.hbis.fr/softwares/pfwd
